--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -2,22 +2,68 @@
   <ion-navbar>
     <ion-title>My Reminders</ion-title>
   </ion-navbar>
+
+  <!--<div class="bar bar-header bar-royal">
+    <h1 class="title">My Reminders</h1>
+  </div>-->
 </ion-header>
+
+
 
 <ion-content padding>
 
-  <h3>Manage Reminders</h3>
-
   <ion-card>
-    <ion-card-content>
-      a count by category will go here
-    </ion-card-content>
-  </ion-card>
+  <ion-card-header>
+    Explore Nearby
+  </ion-card-header>
+
+  <ion-list>
+    <button ion-item>
+      <ion-icon name="cart" item-left></ion-icon>
+      Shopping
+    </button>
+
+    <button ion-item>
+      <ion-icon name="medical" item-left></ion-icon>
+      Hospital
+    </button>
+
+    <button ion-item>
+      <ion-icon name="cafe" item-left></ion-icon>
+      Cafe
+    </button>
+
+    <button ion-item>
+      <ion-icon name="paw" item-left></ion-icon>
+      Dog Park
+    </button>
+
+    <button ion-item>
+      <ion-icon name="beer" item-left></ion-icon>
+      Pub
+    </button>
+
+    <button ion-item>
+      <ion-icon name="planet" item-left></ion-icon>
+      Space
+    </button>
+
+  </ion-list>
+</ion-card>
+
+
 
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar>
-    <button ion-button block color="primary" (click)="goToRemindersList()">View Reminders</button>
-  </ion-toolbar>
+  <ion-toolbar class="button-bar">
+    <button ion-button block (click)="goToDetailView()">
+      Add Reminder
+      <ion-icon padding name="add-circle"></ion-icon>
+    </button>   
+    <button ion-button block outline (click)="goToListView()">
+      View List
+      <ion-icon padding name="search"></ion-icon>
+    </button>
+    </ion-toolbar>
 </ion-footer>
