--- a/src/pages/item-details/item-details.html
+++ b/src/pages/item-details/item-details.html
@@ -27,7 +27,7 @@
 
   <ion-item>
     <ion-label>Title</ion-label>
-    <ion-input type="text" aria-placeholder="Title" [(ngModel)]="selectedItem.title"></ion-input>
+    <ion-textarea rows="2" aria-placeholder="Title" [(ngModel)]="selectedItem.title"></ion-textarea>
   </ion-item>
 
   <ion-item>
@@ -35,7 +35,12 @@
     <ion-textarea rows="10" aria-placeholder="Notes" [(ngModel)]="selectedItem.note"></ion-textarea>
   </ion-item>
 
-
+<ion-item>
+  <button ion-button color="danger" icon-right (click)="removeItem()">   
+    Remove Item
+    <ion-icon name="remove-circle"></ion-icon>
+    </button>
+</ion-item>
 
 </ion-content>
 
