--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -10,6 +10,10 @@
     </ion-buttons>
 
   </ion-navbar>
+
+  <ion-toolbar>
+    <ion-searchbar [(ngModel)]="queryText" (ionInput)="doQueryFilter()"></ion-searchbar>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
